--- a/build
+++ b/build
@@ -2076,9 +2076,9 @@ for SPECFILE in "${SPECFILES[@]}" ; do
 #	if [ -n "$BUILD_JOBS" ]; then
 #	    DSC_BUILD_JOBS="-j$BUILD_JOBS"
 #	fi
-	DSC_BUILD_CMD="dpkg-buildpackage -us -uc -rfakeroot-tcp $DSC_BUILD_JOBS"
+	DSC_BUILD_CMD="dpkg-buildpackage -us -uc -rfakeroot $DSC_BUILD_JOBS"
 	if test -e $BUILD_ROOT/$TOPDIR/SOURCES/build.script ; then
-	    echo "Sourcing build.script to build - it should normally run 'dpkg-buildpackage -us -uc -rfakeroot-tcp'"
+	    echo "Sourcing build.script to build - it should normally run 'dpkg-buildpackage -us -uc -rfakeroot'"
 	    DSC_BUILD_CMD="source $TOPDIR/SOURCES/build.script"
 	    chmod +x $BUILD_ROOT/$TOPDIR/SOURCES/build.script
 	fi
