Make sure /run/shm is umounted
  Due to tmpfs directories being transitioned to /run, sysvinit scripts
  attempt to migrate /dev/shm to /run/shm, which after one package has
  setup its build chroot makes to fail next build that attempts to
  install sysvinit scripts (initscripts).

Signed-off-by: Hector Oron <hector.oron@collabora.co.uk>
Signed-off-by: Héctor Orón Martínez <hector.oron@collabora.co.uk>

Rebase 20180302 (T14726) - Add umount in build-recipe-debootstrap.

--- a/build
+++ b/build
@@ -431,6 +431,7 @@ cleanup_and_exit () {
 	umount -n $BUILD_ROOT/proc 2>/dev/null || true
 	umount -n $BUILD_ROOT/dev/pts 2>/dev/null || true
 	umount -n $BUILD_ROOT/dev/shm 2>/dev/null || true
+	umount -n $BUILD_ROOT/run/shm 2>/dev/null || true
 	umount -n $BUILD_ROOT/sys 2>/dev/null || true
 	test -n "$VM_ROOT" -a "$VM_ROOT" != 1 && umount $BUILD_ROOT 2>/dev/null || true
 	test -n "$VM_TYPE" && vm_cleanup
@@ -1444,6 +1445,7 @@ for RECIPEFILE in "${RECIPEFILES[@]}" ; do
 	umount -n $BUILD_ROOT/proc 2>/dev/null || true
 	umount -n $BUILD_ROOT/dev/pts 2>/dev/null || true
 	umount -n $BUILD_ROOT/dev/shm 2>/dev/null || true
+	umount -n $BUILD_ROOT/run/shm 2>/dev/null || true
 	umount -n $BUILD_ROOT/sys 2>/dev/null || true
     fi
 done
