Fix umount /dev/shm and /run/shm leak
Signed-off-by: Hector Oron <hector.oron@gmail.com>
Signed-off-by: Héctor Orón Martínez <hector.oron@collabora.co.uk>

--- a/build
+++ b/build
@@ -1520,6 +1520,8 @@ for SPECFILE in "${SPECFILES[@]}" ; do
 	umount -n $BUILD_ROOT/proc/sys/fs/binfmt_misc 2> /dev/null || true
 	umount -n $BUILD_ROOT/proc 2> /dev/null || true
 	umount -n $BUILD_ROOT/dev/pts 2> /dev/null || true
+	umount -n $BUILD_ROOT/dev/shm 2>/dev/null || true
+	umount -n $BUILD_ROOT/run/shm 2>/dev/null || true
 	umount -n $BUILD_ROOT/mnt 2> /dev/null || true
 
 	if [ -n "$VM_IMAGE" ]; then
