--- a/build
+++ b/build
@@ -1959,7 +1959,7 @@ for SPECFILE in "${SPECFILES[@]}" ; do
 	    DEB_DSCFILE="${DEB_DSCFILE##*/}"
 	fi
 	DEBBUILDDIR=$TOPDIR/BUILD/$(echo $DEB_DSCFILE |  sed -e 's/\([^_]*\)_\([^-]*\).*\.dsc$/\1-\2/')
-	DEBVERSION=$(echo $DEB_DSCFILE |  sed -e 's/[^_]*_\(.*\).*\.dsc$/\1/')
+	DEBVERSION=$(egrep -m1 '^Version: ' $BUILD_ROOT/$DEB_SOURCEDIR/$DEB_DSCFILE  | sed 's/^Version:[ ]*//')
 
 	chroot $BUILD_ROOT su -c "dpkg-source -x $DEB_SOURCEDIR/$DEB_DSCFILE $DEBBUILDDIR" - $BUILD_USER
 	chroot $BUILD_ROOT su -c "cd $DEBBUILDDIR && dch  --force-distribution -D unstable -v ${DEBVERSION}+${RELEASE} $REASON" - $BUILD_USER
