--- a/build
+++ b/build
@@ -1962,7 +1962,7 @@ for SPECFILE in "${SPECFILES[@]}" ; do
 	DEBVERSION=$(egrep -m1 '^Version: ' $BUILD_ROOT/$DEB_SOURCEDIR/$DEB_DSCFILE  | sed 's/^Version:[ ]*//')
 
 	chroot $BUILD_ROOT su -c "dpkg-source -x $DEB_SOURCEDIR/$DEB_DSCFILE $DEBBUILDDIR" - $BUILD_USER
-	chroot $BUILD_ROOT su -c "cd $DEBBUILDDIR && dch  --force-distribution -D unstable -v ${DEBVERSION}+${RELEASE} $REASON" - $BUILD_USER
+	chroot $BUILD_ROOT su -c "cd $DEBBUILDDIR && dch  --preserve --force-distribution -D unstable -v ${DEBVERSION}${RELEASE} $REASON" - $BUILD_USER
     fi
 
     if test "$BUILDTYPE" = arch ; then
