--- a/build
+++ b/build
@@ -74,6 +74,7 @@ MEMSIZE=
 RUNNING_IN_VM=
 RPMLIST=
 RELEASE=
+PROFILE=
 REASON=
 NOROOTFORBUILD=
 LOGFILE=
@@ -954,6 +955,11 @@ while test -n "$1"; do
 	RELEASE="$ARG"
 	shift
       ;;
+      *-profile)
+	needarg
+	PROFILE="$ARG"
+	shift
+      ;;
       *-logfile)
 	needarg
 	LOGFILE="$ARG"
@@ -1344,6 +1350,7 @@ if [ -z "$RUNNING_IN_VM" ]; then
     test -n "$BUILD_RPMS" && echo Using BUILD_RPMS=$BUILD_RPMS
     echo Using BUILD_ARCH=$BUILD_ARCH
     echo Using RELEASE=$RELEASE
+    echo Using PROFILE=$PROFILE
     test -n "$VM_TYPE" && echo "Doing $VM_TYPE build${VM_IMAGE:+ in $VM_IMAGE}"
     echo
 fi
@@ -2082,9 +2089,16 @@ for SPECFILE in "${SPECFILES[@]}" ; do
 #	if [ -n "$BUILD_JOBS" ]; then
 #	    DSC_BUILD_JOBS="-j$BUILD_JOBS"
 #	fi
+
+	# Use a build profile if specified
+	DSC_BUILD_PROFILE=
+	if [ -n "$PROFILE" ]; then
+	    DSC_BUILD_PROFILE="-P$PROFILE"
+	fi
+
 	# Adding file so Ubuntu linux kernel package auto-detects it is buildd environment
 	touch $BUILD_ROOT/CurrentlyBuilding
-	DSC_BUILD_CMD="dpkg-buildpackage -b -v${DEBVERSION}~0 -us -uc -rfakeroot $DSC_BUILD_JOBS"
+	DSC_BUILD_CMD="dpkg-buildpackage -b -v${DEBVERSION}~0 -us -uc -rfakeroot $DSC_BUILD_JOBS $DSC_BUILD_PROFILE"
 	if test -e $BUILD_ROOT/$TOPDIR/SOURCES/build.script ; then
 	    echo "Sourcing build.script to build - it should normally run 'dpkg-buildpackage -us -uc -rfakeroot'"
 	    DSC_BUILD_CMD="source $TOPDIR/SOURCES/build.script"
