--- a/build
+++ b/build
@@ -85,6 +85,7 @@ LIST_STATE=
 RUNNING_IN_VM=
 RPMLIST=
 RELEASE=
+PROFILE=
 REASON=
 NOROOTFORBUILD=
 LOGFILE=
@@ -885,6 +886,11 @@ while test -n "$1"; do
 	RELEASE="$ARG"
 	shift
       ;;
+      -profile)
+	needarg
+	PROFILE="$ARG"
+	shift
+      ;;
       -logfile)
 	needarg
 	LOGFILE="$ARG"
@@ -1170,6 +1176,7 @@ if test -z "$RUNNING_IN_VM" ; then
     test -n "$BUILD_RPMS" && echo Using BUILD_RPMS=$BUILD_RPMS
     echo Using BUILD_ARCH=$BUILD_ARCH
     echo Using RELEASE=$RELEASE
+    echo Using PROFILE=$PROFILE
     test -n "$VM_TYPE" && echo "Doing $VM_TYPE build${VM_ROOT:+ in $VM_ROOT}"
     echo
 fi
