Kill chroot processes with SIGTERM before SIGKILL
Killing all processes in the chroot with SIGKILL does not give them a
chance to clean up. Currently this is causing an issue with fakeroot
where faked is started and creates a semaphore for IPC. When faked is
killed with SIGKILL, it can't clean up the semaphore. Eventually, all
semaphores are exhausted and faked can't be started on a subsequent
build.

Call killchroot once with SIGTERM and wait 2 seconds before calling with
SIGKILL. Hopefully this will give processes enough time to cleanup
before they're forcefully killed.

https://phabricator.endlessm.com/T14181

--- a/build
+++ b/build
@@ -750,6 +750,10 @@ kill_running_build() {
 	vm_set_buildstatus 1
 	vm_kill
     else
+	# Kill once with SIGTERM to allow processes to clean up and then
+	# follow with SIGKILL to ensure all processes are gone
+	$BUILD_DIR/killchroot -s 15 $BUILD_ROOT
+	sleep 2
 	if ! $BUILD_DIR/killchroot -s 9 $BUILD_ROOT ; then
 	    cleanup_and_exit 1 "could not kill build in $BUILD_ROOT"
 	fi
