Mount /sys in buildroot
The sysfs mount at /sys is a standard part of Linux systems. While the
majority of builds don't need it, it's pretty reasonable that some will.
In particular, systemd's network test expects to create open a udev
device from /sys/class/net/lo.

https://phabricator.endlessm.com/T15164

--- a/build
+++ b/build
@@ -309,6 +309,7 @@ cleanup_and_exit () {
     else
 	umount -n $BUILD_ROOT/proc/sys/fs/binfmt_misc 2> /dev/null || true
 	umount -n $BUILD_ROOT/proc 2>/dev/null || true
+	umount -n $BUILD_ROOT/sys 2>/dev/null || true
 	umount -n $BUILD_ROOT/dev/pts 2>/dev/null || true
 	umount -n $BUILD_ROOT/dev/shm 2>/dev/null || true
 	umount -n $BUILD_ROOT/run/shm 2>/dev/null || true
@@ -327,9 +328,11 @@ fail_exit()
 setup_virtual_filesystems()
 {
     mkdir -p $BUILD_ROOT/proc
+    mkdir -p $BUILD_ROOT/sys
     mkdir -p $BUILD_ROOT/dev/pts
     mkdir -p $BUILD_ROOT/dev/shm
     mount -n -tproc none $BUILD_ROOT/proc || true
+    mount -n -tsysfs none $BUILD_ROOT/sys
     mount -n -tdevpts -omode=0620,gid=5 none $BUILD_ROOT/dev/pts
     if ! test -f $BUILD_ROOT/dev/shm/.mounted ; then
       mount -n -ttmpfs none $BUILD_ROOT/dev/shm
@@ -1530,6 +1533,7 @@ for SPECFILE in "${SPECFILES[@]}" ; do
 	echo "shell='$shell'" >> $BUILD_ROOT/.build/build.data
 	umount -n $BUILD_ROOT/proc/sys/fs/binfmt_misc 2> /dev/null || true
 	umount -n $BUILD_ROOT/proc 2> /dev/null || true
+	umount -n $BUILD_ROOT/sys 2> /dev/null || true
 	umount -n $BUILD_ROOT/dev/pts 2> /dev/null || true
 	umount -n $BUILD_ROOT/dev/shm 2>/dev/null || true
 	umount -n $BUILD_ROOT/run/shm 2>/dev/null || true
